get active image from slider when submitting

--- a/templates/input.html
+++ b/templates/input.html
@@ -23,7 +23,7 @@
       </form>
     </div>
   </div>
-  <input id="submit_text" class="btn btn-primary" type="submit" value="Estimate Location">
+  <input id="submit_text" class="btn btn-primary" type="submit" value="Retrieve Results">
 </div>
 
 <!-- Image content -->
@@ -35,11 +35,11 @@
       </li>
     {% endfor %}
   </ul>
-  <input id="submit_image" class="btn btn-primary" type="submit" value="Estimate Location">
+  <input id="submit_image" class="btn btn-primary" type="submit" value="Retrieve Results">
 </div>
 
 <!-- Upload content -->
 <div id="upload" class="tabcontent">
   <p>Upload image.</p>
-  <input id="submit_upload" class="btn btn-primary" type="submit" value="Estimate Location">
+  <input id="submit_upload" class="btn btn-primary" type="submit" value="Retrieve Results">
 </div>
