--- a/templates/results.html
+++ b/templates/results.html
@@ -1,2 +1,5 @@
-<h5>Results:</h5>
-<div id="answer" class="container-fluid"></div>
+<div class="card mb-3">
+    <h4 class="card-header">Information Retrieval</h4>
+    <div class="card-body" id="results" style="overflow: scroll;">
+    </div>
+</div>
