--- a/templates/map.html
+++ b/templates/map.html
@@ -1,20 +1,5 @@
-<div id="mapid"></div>
-
-<script type="text/javascript">
-    // The first parameter are the coordinates of the center of the map
-    // The second parameter is the zoom level
-    var map = L.map('mapid').setView([51.1657, 10.4515], 2);
-
-    // {s}, {z}, {x} and {y} are placeholders for map tiles
-    // {x} and {y} are the x/y of where you are on the map
-    // {z} is the zoom level
-    // {s} is the subdomain of cartodb
-        var layer = L.tileLayer('http://{s}.basemaps.cartocdn.com/light_all/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, &copy; <a href="http://cartodb.com/attributions">CartoDB</a>'
-    });
-
-    // Now add the layer onto the map
-    map.addLayer(layer);
-
-    L.marker([40.712, -74.006]).addTo(map) // .bindPopup("<strong></strong>").openPopup();
-</script>
+<div class="card mb-3">
+    <h4 class="card-header">Location Estimation</h4>
+    <div class="card-body" id="mapid">
+    </div>
+</div>
