--- a/templates/info-modal.html
+++ b/templates/info-modal.html
@@ -8,7 +8,16 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>Info text...</p>
+          <p>
+            This app is based on two main tasks: information retrieval and location estimation.
+            You can upload an image as input or select one of the samples.
+            Regarding location estimation, the top 10 predicted locations are displayed on the map.
+            While for the information retrieval task, the top 10 visually similar human settlement entities from Wikidata are returned and presented in the right box.
+            If you are interested in the current news taking place in any of the retrieved entities, just click the button on the bottom and enjoy the news!
+          </p>
+          <p>
+            MLM-Geo is built on top of MLM dataset. For more details about the dataset <a href="http://cleopatra.ijs.si/goal-mlm/" target="_blank">click here</a>!
+          </p>
         </div>
       </div>
     </div>
