- changes on results and menu files

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,5 +1,6 @@
-<div>
-    <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#imageModal"><i class="fa fa-fw fa-image"></i></button>
-    <!-- <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#uploadModal"><i class="fa fa-fw fa-upload"></i></button> -->
-    <button type="button" class="btn btn-outline-primary" data-toggle="modal" data-target="#infoModal"><i class="fa fa-fw fa-info"></i></button>
+<div style="text-align: center;">
+    <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target="#imageModal" style="margin-bottom: 5px"><i class="fa fa-fw fa-image"></i></button>
+    <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target="#uploadModal" style="margin-bottom: 5px"><i class="fa fa-fw fa-upload"></i></button>
+    <a class="btn btn-outline-primary btn-lg" href="https://github.com/GOALCLEOPATRA/MLM_Geo" target="_blank" style="margin-bottom: 5px"><i class="fa fa-fw fa-github-square"></i></a>
+    <button type="button" class="btn btn-outline-primary btn-lg" data-toggle="modal" data-target="#infoModal" style="margin-bottom: 5px"><i class="fa fa-fw fa-info"></i></button>
 </div>
