--- a/templates/results.html
+++ b/templates/results.html
@@ -1,5 +1,5 @@
 <div class="card mb-3">
     <h4 class="card-header">Information Retrieval</h4>
-    <div class="card-body" id="results" style="overflow: scroll;">
+    <div class="card-body" id="results">
     </div>
 </div>
