--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,6 +10,13 @@ footer div {
 
 #results {
     height: 500px;
+    overflow-y: auto;
+}
+
+#imageSamples {
+    text-align: center;
+    height: 500px;
+    overflow-y:auto;
 }
 
 #mapid {
@@ -33,4 +40,58 @@ footer div {
     margin:10px;
     border: 2px solid #333;
     border-radius: 555px 25px 15px 25px/25px 5px 35px 555px;
+}
+
+#overlay{
+	position: fixed;
+    top: 0;
+    left: 0;
+	z-index: 10000;
+	width: 100%;
+	height: 100%;
+    display: none;
+	background: rgba(0,0,0,0.6);
+}
+
+.lds-circle {
+    display: inline-block;
+    transform: translateZ(1px);
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.lds-circle-div {
+    display: inline-block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    background: #fff;
+    animation: lds-circle 2.4s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+@keyframes lds-circle {
+    0%, 100% {
+        animation-timing-function: cubic-bezier(0.5, 0, 1, 0.5);
+    }
+    0% {
+        transform: rotateY(0deg);
+    }
+    50% {
+        transform: rotateY(1800deg);
+        animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+    }
+    100% {
+        transform: rotateY(3600deg);
+    }
+}
+
+.lds-circle-text {
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #fff;
+    font-family: "Cabin Sketch", cursive;
 }
