- update infobox text

--- a/templates/info-modal.html
+++ b/templates/info-modal.html
@@ -9,11 +9,23 @@
         </div>
         <div class="modal-body">
           <p>
-            This app is based on two main tasks: information retrieval and location estimation.
+            MLM-Geo is based on two main tasks: information retrieval and location estimation.
             You can upload an image as input or select one of the samples.
             Regarding location estimation, the top 10 predicted locations are displayed on the map.
-            While for the information retrieval task, the top 10 visually similar human settlement entities from Wikidata are returned and presented in the right box.
+            While for the information retrieval task, the top 10 visually similar human settlement entities from <a href="https://www.wikidata.org/wiki/Wikidata:Main_Page" target="_blank">Wikidata</a> are returned and presented in the right box.
             If you are interested in the current news taking place in any of the retrieved entities, just click the button on the bottom and enjoy the news!
+          </p>
+          <p>
+            Here’s how it works:
+            <ol>
+              <li>Upload an image as input or select one of the samples.</li>
+              <li>Select a language for textual information and click 'Retrieve Results'.</li>
+              <li>Top 10 predicted locations will be displayed on the map and information retrieval results in the box to the right.</li>
+              <li>Enjoy the news!</li>
+            </ol>
+          </p>
+          <p>
+            MLM-Geo provides the current news taking place in any of the retrieved entities using <a href="https://eventregistry.org/" target="_blank">EventRegistry</a>!
           </p>
           <p>
             MLM-Geo is built on top of MLM dataset. For more details about the dataset <a href="http://cleopatra.ijs.si/goal-mlm/" target="_blank">click here</a>!
